append each card item to thge homes list

--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
     </div>
 
     <div class="homes">
-      <div class="home">
+      <!-- <div class="home">
         <img
-          src="./Images/house-1.jpeg"
+          src="./Images/house-2.jpeg"
           alt="Beautiful Family House"
           srcset=""
           class="home__image"
@@ -241,6 +241,142 @@
         <button class="home__button">contact Relators</button>
       </div>
       <div class="home">
+        <img
+          src="./Images/house-3.jpeg"
+          alt="Beautiful Family House"
+          srcset=""
+          class="home__image"
+        />
+        <h5 class="home__name">Beautiful Family House</h5>
+        <div class="home__location">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-location2"></use>
+          </svg>
+          <p>USA</p>
+        </div>
+        <div class="home__roomcounts">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-user"></use>
+          </svg>
+          <p>5 rooms</p>
+        </div>
+        <div class="home__area">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-expand"></use>
+          </svg>
+          <p>325m<sup>2</sup></p>
+        </div>
+        <div class="home__price">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-key"></use>
+          </svg>
+          <p>$1,200,000</p>
+        </div>
+        <button class="home__button">contact Relators</button>
+      </div>
+      <div class="home">
+        <img
+          src="./Images/house-4.jpeg"
+          alt="Beautiful Family House"
+          srcset=""
+          class="home__image"
+        />
+        <h5 class="home__name">Beautiful Family House</h5>
+        <div class="home__location">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-location2"></use>
+          </svg>
+          <p>USA</p>
+        </div>
+        <div class="home__roomcounts">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-user"></use>
+          </svg>
+          <p>5 rooms</p>
+        </div>
+        <div class="home__area">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-expand"></use>
+          </svg>
+          <p>325m<sup>2</sup></p>
+        </div>
+        <div class="home__price">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-key"></use>
+          </svg>
+          <p>$1,200,000</p>
+        </div>
+        <button class="home__button">contact Relators</button>
+      </div>
+      <div class="home">
+        <img
+          src="./Images/house-5.jpeg"
+          alt="Beautiful Family House"
+          srcset=""
+          class="home__image"
+        />
+        <h5 class="home__name">Beautiful Family House</h5>
+        <div class="home__location">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-location2"></use>
+          </svg>
+          <p>USA</p>
+        </div>
+        <div class="home__roomcounts">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-user"></use>
+          </svg>
+          <p>5 rooms</p>
+        </div>
+        <div class="home__area">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-expand"></use>
+          </svg>
+          <p>325m<sup>2</sup></p>
+        </div>
+        <div class="home__price">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-key"></use>
+          </svg>
+          <p>$1,200,000</p>
+        </div>
+        <button class="home__button">contact Relators</button>
+      </div>
+      <div class="home">
+        <img
+          src="./Images/house-6.jpeg"
+          alt="Beautiful Family House"
+          srcset=""
+          class="home__image"
+        />
+        <h5 class="home__name">Beautiful Family House</h5>
+        <div class="home__location">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-location2"></use>
+          </svg>
+          <p>USA</p>
+        </div>
+        <div class="home__roomcounts">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-user"></use>
+          </svg>
+          <p>5 rooms</p>
+        </div>
+        <div class="home__area">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-expand"></use>
+          </svg>
+          <p>325m<sup>2</sup></p>
+        </div>
+        <div class="home__price">
+          <svg class="home__icon">
+            <use xlink:href="./sprite.svg#icon-key"></use>
+          </svg>
+          <p>$1,200,000</p>
+        </div>
+        <button class="home__button">contact Relators</button>
+      </div> -->
+      <!-- <div class="home">
         <img
           src="./Images/house-2.jpeg"
           alt="Modern Glass Villa"
@@ -409,7 +545,7 @@
           <p>$1,200,000</p>
         </div>
         <button class="home__button">contact Relators</button>
-      </div>
+      </div> -->
     </div>
 
     <div class="img__galleries">Image galleries</div>
@@ -488,5 +624,116 @@
     function prevSlide() {
       showSlide(index - 1);
     }
+
+    const Houses = [
+      {
+        HouseName: "Modern Luxury Villa",
+        HouseImageLocalURL: "./Images/house-1.jpeg",
+        country: "Canada",
+        noOfRooms: 6,
+        area: "400m²",
+        price: "$1,500,000",
+      },
+      {
+        HouseName: "Cozy Suburban Home",
+        HouseImageLocalURL: "./Images/house-1.jpeg",
+        country: "UK",
+        noOfRooms: 4,
+        area: "280m²",
+        price: "$950,000",
+      },
+      {
+        HouseName: "Seaside Cottage",
+        HouseImageLocalURL: "./Images/house-2.jpeg",
+        country: "Australia",
+        noOfRooms: 3,
+        area: "200m²",
+        price: "$750,000",
+      },
+      {
+        HouseName: "Mountain Retreat",
+        HouseImageLocalURL: "./Images/house-3.jpeg",
+        country: "Switzerland",
+        noOfRooms: 5,
+        area: "350m²",
+        price: "$1,800,000",
+      },
+      {
+        HouseName: "Elegant Penthouse",
+        HouseImageLocalURL: "./Images/house-4.jpeg",
+        country: "France",
+        noOfRooms: 5,
+        area: "320m²",
+        price: "$2,100,000",
+      },
+      {
+        HouseName: "Countryside Farmhouse",
+        HouseImageLocalURL: "./Images/house-5.jpeg",
+        country: "Italy",
+        noOfRooms: 7,
+        area: "500m²",
+        price: "$1,300,000",
+      },
+      {
+        HouseName: "Lakeview Bungalow",
+        HouseImageLocalURL: "./Images/house-6.jpeg",
+        country: "New Zealands",
+        noOfRooms: 4,
+        area: "290m²",
+        price: "$980,000",
+      },
+    ];
+
+    // console.log(headingElement);
+
+    const homesElement = document.querySelector(".homes");
+
+    Houses.map((house) => {
+      // Create a new div element for each house
+      const homeElement = document.createElement("div");
+      homeElement.classList.add("home"); // Add the "home" class to the new element
+
+      // Set the inner HTML for the new home element
+      homeElement.innerHTML = `
+    <img
+      src="${house.HouseImageLocalURL}"
+      alt="Beautiful Family House"
+      srcset=""
+      class="home__image"
+    />
+    <h5 class="home__name">${house.HouseName}</h5>
+    <div class="home__location">
+      <svg class="home__icon">
+        <use xlink:href="./sprite.svg#icon-location2"></use>
+      </svg>
+      <p>${house.country}</p>
+    </div>
+    <div class="home__roomcounts">
+      <svg class="home__icon">
+        <use xlink:href="./sprite.svg#icon-user"></use>
+      </svg>
+      <p>${house.noOfRooms}</p>
+    </div>
+    <div class="home__area">
+      <svg class="home__icon">
+        <use xlink:href="./sprite.svg#icon-expand"></use>
+      </svg>
+      <p>${house.area}m<sup>2</sup></p>
+    </div>
+    <div class="home__price">
+      <svg class="home__icon">
+        <use xlink:href="./sprite.svg#icon-key"></use>
+      </svg>
+      <p>${house.price}</p>
+    </div>
+    <button class="home__button">Contact Realtors</button>
+  `;
+
+      // Append the new home element to the homes container
+      homesElement.appendChild(homeElement);
+    });
+    // console.log(homeElement);
+    // console.log(homeElement);
+    // console.log(house);
   </script>
 </html>
