--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
 
   <body class="container">
@@ -115,7 +116,7 @@
       </div>
     </div>
 
-    <div class="features">
+    <div class="features" data-aos="fade-up" data-aos-delay="200">
       <div class="feature">
         <svg class="feature__icon">
           <use xlink:href="./sprite.svg#icon-sphere"></use>
@@ -205,7 +206,7 @@
       <button class="btn">Find Your Own Home</button>
     </div>
 
-    <div class="homes">
+    <div class="homes" data-aos="fade-left" data-aos-delay="200">
       <!-- <div class="home">
         <img
           src="./Images/house-2.jpeg"
@@ -577,163 +578,165 @@
         doloribus?]
       </div>
     </footer>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <script>
+      function showHideAboutMenu() {
+        const sidebarMenuElement = document.querySelector(
+          ".sidebar__about__menu"
+        );
+
+        if (
+          sidebarMenuElement.classList.contains("sidebar__about__menu-none")
+        ) {
+          sidebarMenuElement.classList.remove("sidebar__about__menu-none");
+        } else {
+          sidebarMenuElement.classList.add("sidebar__about__menu-none");
+        }
+      }
+
+      function showHideServiceMenu() {
+        const sidebarMenuElement = document.querySelector(
+          ".sidebar__services__menu"
+        );
+        console.log(sidebarMenuElement);
+        if (
+          sidebarMenuElement.classList.contains("sidebar__services__menu-none")
+        ) {
+          sidebarMenuElement.classList.remove("sidebar__services__menu-none");
+        } else {
+          sidebarMenuElement.classList.add("sidebar__services__menu-none");
+        }
+      }
+
+      let index = 0;
+      const slides = document.querySelectorAll(".slide");
+      const totalSlides = slides.length;
+
+      function showSlide(i) {
+        index = (i + totalSlides) % totalSlides; // Handle wrap-around
+        document.querySelector(".slider").style.transform = `translateX(-${
+          index * 100
+        }%)`;
+      }
+
+      function nextSlide() {
+        showSlide(index + 1);
+      }
+
+      function prevSlide() {
+        showSlide(index - 1);
+      }
+
+      const Houses = [
+        {
+          HouseName: "Modern Luxury Villa",
+          HouseImageLocalURL: "./Images/house-1.jpeg",
+          country: "Canada",
+          noOfRooms: 6,
+          area: "400m²",
+          price: "$1,500,000",
+        },
+        {
+          HouseName: "Cozy Suburban Home",
+          HouseImageLocalURL: "./Images/house-1.jpeg",
+          country: "UK",
+          noOfRooms: 4,
+          area: "280m²",
+          price: "$950,000",
+        },
+        {
+          HouseName: "Seaside Cottage",
+          HouseImageLocalURL: "./Images/house-2.jpeg",
+          country: "Australia",
+          noOfRooms: 3,
+          area: "200m²",
+          price: "$750,000",
+        },
+        {
+          HouseName: "Mountain Retreat",
+          HouseImageLocalURL: "./Images/house-3.jpeg",
+          country: "Switzerland",
+          noOfRooms: 5,
+          area: "350m²",
+          price: "$1,800,000",
+        },
+        {
+          HouseName: "Elegant Penthouse",
+          HouseImageLocalURL: "./Images/house-4.jpeg",
+          country: "France",
+          noOfRooms: 5,
+          area: "320m²",
+          price: "$2,100,000",
+        },
+        {
+          HouseName: "Countryside Farmhouse",
+          HouseImageLocalURL: "./Images/house-5.jpeg",
+          country: "Italy",
+          noOfRooms: 7,
+          area: "500m²",
+          price: "$1,300,000",
+        },
+        {
+          HouseName: "Lakeview Bungalow",
+          HouseImageLocalURL: "./Images/house-6.jpeg",
+          country: "New Zealands",
+          noOfRooms: 4,
+          area: "290m²",
+          price: "$980,000",
+        },
+      ];
+
+      const homesElement = document.querySelector(".homes");
+
+      Houses.map((house) => {
+        // Create a new div element for each house
+        const homeElement = document.createElement("div");
+        homeElement.classList.add("home");
+
+        // Add the "home" class to the new element
+
+        // Set the inner HTML for the new home element
+        homeElement.innerHTML = ` <img
+           src="${house.HouseImageLocalURL}"
+           alt="Beautiful Family House"
+           srcset=""
+           class="home__image"
+         />
+         <h5 class="home__name">${house.HouseName}</h5>
+         <div class="home__location">
+           <svg class="home__icon">
+             <use xlink:href="./sprite.svg#icon-location2"></use>
+           </svg>
+           <p>${house.country}</p>
+         </div>
+         <div class="home__roomcounts">
+           <svg class="home__icon">
+             <use xlink:href="./sprite.svg#icon-user"></use>
+           </svg>
+           <p>${house.noOfRooms}</p>
+         </div>
+         <div class="home__area">
+           <svg class="home__icon">
+             <use xlink:href="./sprite.svg#icon-expand"></use>
+           </svg>
+           <p>${house.area}m<sup>2</sup></p>
+         </div>
+         <div class="home__price">
+           <svg class="home__icon">
+             <use xlink:href="./sprite.svg#icon-key"></use>
+           </svg>
+           <p>${house.price}</p>
+         </div>
+         <button class="home__button">Contact Realtors</button>
+       `;
+        // Append the new home element to the homes container
+        homesElement.appendChild(homeElement);
+      });
+
+      AOS.init();
+    </script>
   </body>
-
-  <script>
-    function showHideAboutMenu() {
-      const sidebarMenuElement = document.querySelector(
-        ".sidebar__about__menu"
-      );
-
-      if (sidebarMenuElement.classList.contains("sidebar__about__menu-none")) {
-        sidebarMenuElement.classList.remove("sidebar__about__menu-none");
-      } else {
-        sidebarMenuElement.classList.add("sidebar__about__menu-none");
-      }
-    }
-
-    function showHideServiceMenu() {
-      const sidebarMenuElement = document.querySelector(
-        ".sidebar__services__menu"
-      );
-      console.log(sidebarMenuElement);
-      if (
-        sidebarMenuElement.classList.contains("sidebar__services__menu-none")
-      ) {
-        sidebarMenuElement.classList.remove("sidebar__services__menu-none");
-      } else {
-        sidebarMenuElement.classList.add("sidebar__services__menu-none");
-      }
-    }
-
-    let index = 0;
-    const slides = document.querySelectorAll(".slide");
-    const totalSlides = slides.length;
-
-    function showSlide(i) {
-      index = (i + totalSlides) % totalSlides; // Handle wrap-around
-      document.querySelector(".slider").style.transform = `translateX(-${
-        index * 100
-      }%)`;
-    }
-
-    function nextSlide() {
-      showSlide(index + 1);
-    }
-
-    function prevSlide() {
-      showSlide(index - 1);
-    }
-
-    const Houses = [
-      {
-        HouseName: "Modern Luxury Villa",
-        HouseImageLocalURL: "./Images/house-1.jpeg",
-        country: "Canada",
-        noOfRooms: 6,
-        area: "400m²",
-        price: "$1,500,000",
-      },
-      {
-        HouseName: "Cozy Suburban Home",
-        HouseImageLocalURL: "./Images/house-1.jpeg",
-        country: "UK",
-        noOfRooms: 4,
-        area: "280m²",
-        price: "$950,000",
-      },
-      {
-        HouseName: "Seaside Cottage",
-        HouseImageLocalURL: "./Images/house-2.jpeg",
-        country: "Australia",
-        noOfRooms: 3,
-        area: "200m²",
-        price: "$750,000",
-      },
-      {
-        HouseName: "Mountain Retreat",
-        HouseImageLocalURL: "./Images/house-3.jpeg",
-        country: "Switzerland",
-        noOfRooms: 5,
-        area: "350m²",
-        price: "$1,800,000",
-      },
-      {
-        HouseName: "Elegant Penthouse",
-        HouseImageLocalURL: "./Images/house-4.jpeg",
-        country: "France",
-        noOfRooms: 5,
-        area: "320m²",
-        price: "$2,100,000",
-      },
-      {
-        HouseName: "Countryside Farmhouse",
-        HouseImageLocalURL: "./Images/house-5.jpeg",
-        country: "Italy",
-        noOfRooms: 7,
-        area: "500m²",
-        price: "$1,300,000",
-      },
-      {
-        HouseName: "Lakeview Bungalow",
-        HouseImageLocalURL: "./Images/house-6.jpeg",
-        country: "New Zealands",
-        noOfRooms: 4,
-        area: "290m²",
-        price: "$980,000",
-      },
-    ];
-
-    // console.log(headingElement);
-
-    const homesElement = document.querySelector(".homes");
-
-    Houses.map((house) => {
-      // Create a new div element for each house
-      const homeElement = document.createElement("div");
-      homeElement.classList.add("home"); // Add the "home" class to the new element
-
-      // Set the inner HTML for the new home element
-      homeElement.innerHTML = `
-    <img
-      src="${house.HouseImageLocalURL}"
-      alt="Beautiful Family House"
-      srcset=""
-      class="home__image"
-    />
-    <h5 class="home__name">${house.HouseName}</h5>
-    <div class="home__location">
-      <svg class="home__icon">
-        <use xlink:href="./sprite.svg#icon-location2"></use>
-      </svg>
-      <p>${house.country}</p>
-    </div>
-    <div class="home__roomcounts">
-      <svg class="home__icon">
-        <use xlink:href="./sprite.svg#icon-user"></use>
-      </svg>
-      <p>${house.noOfRooms}</p>
-    </div>
-    <div class="home__area">
-      <svg class="home__icon">
-        <use xlink:href="./sprite.svg#icon-expand"></use>
-      </svg>
-      <p>${house.area}m<sup>2</sup></p>
-    </div>
-    <div class="home__price">
-      <svg class="home__icon">
-        <use xlink:href="./sprite.svg#icon-key"></use>
-      </svg>
-      <p>${house.price}</p>
-    </div>
-    <button class="home__button">Contact Realtors</button>
-  `;
-
-      // Append the new home element to the homes container
-      homesElement.appendChild(homeElement);
-    });
-    // console.log(homeElement);
-    // console.log(homeElement);
-    // console.log(house);
-  </script>
 </html>
