structure made 4 checkbox for 4 room checkbox made maintaing the responsiveness

--- a/index.html
+++ b/index.html
@@ -187,6 +187,19 @@
   </div>
 
 
+  <div class="checkbox__with__label">
+    <div>Room Filterings</div>
+    <input type="checkbox" id="4-room" onchange="filtreing4room()" />
+    <label for="4-room">4</label>
+    <input type="checkbox" id="3-room">
+    <label for="3-room">3</label>
+    <input type="checkbox" id="2-room">
+    <label for="2-room">2</label>
+    <input type="checkbox" id="1-room">
+    <label for="1-room">1</label>
+  </div>
+
+
 
   <form class="search">
     <input type="text" placeholder="Search" id="search">
