Fiiltering to the array and update to the dom when tick and untocked

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 
   <div class="sidebar">
     <nav>
-
       <ul class="sidebar__lists" style="list-style-type: none" id="lists">
         <li id="sidebar__anchorplussubmenu1" style="position: relative; background-color: yellow">
           <a href="#" class="about__anchor" style="
@@ -189,7 +188,7 @@
 
   <div class="checkbox__with__label">
     <div>Room Filterings</div>
-    <input type="checkbox" id="4-room" onchange="filtreing4room()" />
+    <input type="checkbox" id="4-room" />
     <label for="4-room">4</label>
     <input type="checkbox" id="3-room">
     <label for="3-room">3</label>
@@ -568,13 +567,25 @@
 
 
 
+
+
+
   <script type="module" src="./main.js"></script>
+
+
+
+  <script src="./TakingCheckedOrNotInput.js" type="module"></script>
+
+
+
 
 
 
 
   <script>
     AOS.init();
+
+
 
 
 
