NoofRoom serach features for all no of room implengted

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 
   <div class="checkbox__with__label">
-    <div>Room Filterings</div>
+    <h1>Room Filterings</h1>
     <input type="checkbox" id="4-room" />
     <label for="4-room">4</label>
     <input type="checkbox" id="3-room">
