Change sidebar name to appmenu to Name to grid lines as well as css file and html file

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
 <body class="container">
 
-  <div class="sidebar">
+  <div class="appmenu">
     <nav>
-      <ul class="sidebar__lists" style="list-style-type: none" id="lists">
-        <li id="sidebar__anchorplussubmenu1" style="position: relative; background-color: yellow">
+      <ul class="appmenu__lists" style="list-style-type: none" id="lists">
+        <li id="appmenu__anchorplussubmenu1" style="position: relative; background-color: yellow">
           <a href="#" class="about__anchor" style="
                 text-decoration: none;
                 color: inherit;
@@ -36,16 +36,16 @@
           </a>
 
           <!-- Submenu inside the same <li> -->
-          <ul class="sidebar__about__menu sidebar__about__menu-none" style="background-color: greenyellow">
-            <li class="sidebar__item">
-              <a href="./about.html" class="sidebar__item__anchor">About </a>
+          <ul class="appmenu__about__menu appmenu__about__menu-none" style="background-color: greenyellow">
+            <li class="appmenu__item">
+              <a href="./about.html" class="appmenu__item__anchor">About </a>
             </li>
-            <li class="sidebar__item">
-              <a href="./testimonials.html" class="sidebar__item__anchor">Testimonials</a>
+            <li class="appmenu__item">
+              <a href="./testimonials.html" class="appmenu__item__anchor">Testimonials</a>
             </li>
           </ul>
         </li>
-        <li id="sidebar__anchorplussubmenu2" style="position: relative; background-color: yellow">
+        <li id="appmenu__anchorplussubmenu2" style="position: relative; background-color: yellow">
           <a href="#" class="services__anchor" style="
                 text-decoration: none;
                 color: inherit;
@@ -57,13 +57,13 @@
           </a>
 
           <!-- Submenu inside the same <li> -->
-          <ul class="sidebar__services__menu sidebar__services__menu-none" style="background-color: greenyellow">
-            <li class="sidebar__item">
-              <a href="./about.html" class="sidebar__item__anchor">Web Design
+          <ul class="appmenu__services__menu appmenu__services__menu-none" style="background-color: greenyellow">
+            <li class="appmenu__item">
+              <a href="./about.html" class="appmenu__item__anchor">Web Design
               </a>
             </li>
-            <li class="sidebar__item">
-              <a href="./testimonials.html" class="sidebar__item__anchor">Web app</a>
+            <li class="appmenu__item">
+              <a href="./testimonials.html" class="appmenu__item__anchor">Web app</a>
             </li>
           </ul>
         </li>
@@ -188,13 +188,13 @@
 
   <div class="checkbox__with__label">
     <h1>Room Filterings</h1>
-    <input type="checkbox" id="4-room" />
+    <input type="checkbox" id="4-room" class="noofroom" />
     <label for="4-room">4</label>
-    <input type="checkbox" id="3-room">
+    <input type="checkbox" id="3-room" class="noofroom" />
     <label for="3-room">3</label>
-    <input type="checkbox" id="2-room">
+    <input type="checkbox" id="2-room" class="noofroom" />
     <label for="2-room">2</label>
-    <input type="checkbox" id="1-room">
+    <input type="checkbox" id="1-room" class="noofroom" />
     <label for="1-room">1</label>
   </div>
 
