Deleted Uncessary Folder

--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
 
 
 
-  <script src="./TakingCheckedOrNotInput.js" type="module"></script>
+  <script src="./SearchNoofRoom.js" type="module"></script>
 
 
 
