Reduced the function

--- a/index.html
+++ b/index.html
@@ -573,8 +573,10 @@
   <script type="module" src="./main.js"></script>
 
 
+  <script type="module" src="./SearchNoofRoom.js"></script>
 
-  <script src="./SearchNoofRoom.js" type="module"></script>
+
+  <script src="./SearchOnTheBasisOfCountry.js" type="module"></script>
 
 
 
