No Data Found if no data in Filtered Array

--- a/index.html
+++ b/index.html
@@ -22,53 +22,7 @@
 <body class="container">
 
   <div class="appmenu">
-    <nav>
-      <ul class="appmenu__lists" style="list-style-type: none" id="lists">
-        <li id="appmenu__anchorplussubmenu1" style="position: relative; background-color: yellow">
-          <a href="#" class="about__anchor" style="
-                text-decoration: none;
-                color: inherit;
-                background-color: yellow;
-                display: block;
-                text-align: center;
-              ">
-            About
-          </a>
-
-          <!-- Submenu inside the same <li> -->
-          <ul class="appmenu__about__menu appmenu__about__menu-none" style="background-color: greenyellow">
-            <li class="appmenu__item">
-              <a href="./about.html" class="appmenu__item__anchor">About </a>
-            </li>
-            <li class="appmenu__item">
-              <a href="./testimonials.html" class="appmenu__item__anchor">Testimonials</a>
-            </li>
-          </ul>
-        </li>
-        <li id="appmenu__anchorplussubmenu2" style="position: relative; background-color: yellow">
-          <a href="#" class="services__anchor" style="
-                text-decoration: none;
-                color: inherit;
-                background-color: yellow;
-                display: block;
-                text-align: center;
-              ">
-            Services
-          </a>
-
-          <!-- Submenu inside the same <li> -->
-          <ul class="appmenu__services__menu appmenu__services__menu-none" style="background-color: greenyellow">
-            <li class="appmenu__item">
-              <a href="./about.html" class="appmenu__item__anchor">Web Design
-              </a>
-            </li>
-            <li class="appmenu__item">
-              <a href="./testimonials.html" class="appmenu__item__anchor">Web app</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </nav>
+    Hello
   </div>
 
   <div class="header">
